src/pages/ru/v1.10.0/deployment/deploy-gcp.mdx
---
title: "Развертывание на Google Cloud"
metaTitle: "Развертывание на Google Cloud"
metaDescription: "Шаг за шагом руководство по развертыванию OpenReplay на Google Cloud."
layout: ~/layouts/MainLayout.astro
i18nReady: true
---
import YoutubeVideo from '~/components/YoutubeVideo.astro'

<YoutubeVideo title="Смотрите, как развернуть OpenReplay в вашей инфраструктуре GCP"
  description="Если вы не любите читать, вы можете следовать этому видеоуроку, показывающему, как развернуть OpenReplay в GCP"
  videoURL="https://youtu.be/t31fj-0t3Dw"
  />

OpenReplay стек может быть установлен на одну машину, и Google Cloud является идеальным кандидатом.

## Запуск ВМ

1. Перейдите в панель управления «Compute Engine» и выберите «Экземпляры ВМ» из левой панели меню
2. Нажмите «Создать экземпляр»
3. Выберите предпочитаемый «регион» и «зону»
4. Выберите тип машины. Минимальные спецификации - это «2 виртуальных процессора, 8 ГБ оперативной памяти, 50 ГБ памяти», иначе службы фонового уровня OpenReplay просто не запустятся. Поэтому мы рекомендуем **по крайней мере** `n2-standard-2` (или эквивалентный - обратите внимание, что `e2-standard-2` известно давать проблемы при развертывании), что достаточно для низкого / умеренного объема. Если вы ожидаете высокой нагрузки, вы должны масштабировать отсюда.
5. Измените ваш диск загрузки на *Ubuntu 20.04 LTS* или выше, затем выберите *SSD постоянный диск* для типа диска загрузки и установите размер в 50 ГБ.
6. Проверьте оба «Разрешить трафик HTTP» и «Разрешить трафик HTTPS» в брандмауэре
7. Нажмите «Создать»

## Развертывание OpenReplay

Как только ваш экземпляр будет «Запущен», подключитесь к нему, нажав кнопку «SSH», затем установите OpenReplay, указав домен, на котором он будет работать (например, DOMAIN_NAME = openreplay.mycompany.com):


```bash
git clone https://github.com/openreplay/openreplay.git
cd openreplay/scripts/helmcharts
DOMAIN_NAME=openreplay.mycompany.com bash init.sh
```


## Настройка TLS / SSL

OpenReplay имеет дело с чувствительными данными пользователей и поэтому требуется HTTPS для работы. Это обязательно, иначе трекер просто не начнет запись. То же самое для панели управления, без HTTPS вы не сможете повторить сеансы пользователей.

Самый простой способ обработки SSL в Google Cloud - это настройка балансировщика нагрузки (Google Load Balancing) и запуск OpenReplay за ним. Другой вариант - создание или использование вашего собственного сертификата SSL и указание вашего подд
```yaml
ingress-nginx: &ingress-nginx
  controller:
    config:
      use-forwarded-headers: true
```
