src/pages/ru/v1.12.0/deployment/deploy-gcp.mdx
---
title: "Развертывание на Google Cloud"
metaTitle: "Развертывание на Google Cloud"
metaDescription: "Шаг за шагом руководство по развертыванию OpenReplay на Google Cloud."
layout: ~/layouts/MainLayout.astro
i18nReady: true
---
import YoutubeVideo from '~/components/YoutubeVideo.astro'

<YoutubeVideo title="Смотрите, как развернуть OpenReplay в вашей инфраструктуре GCP"
  description="Если вы не любите читать, вы можете следовать этому видеоуроку, показывающему, как развернуть OpenReplay в GCP"
  videoURL="https://youtu.be/t31fj-0t3Dw"
  />

OpenReplay стек может быть установлен на одну машину, и Google Cloud является идеальным кандидатом.

## Запуск ВМ

1. Перейдите на панель управления «Compute Engine» и выберите «VM Instances» из левой панели меню
2. Нажмите «Create Instance»
3. Выберите предпочитаемый «регион» и «зону»
4. Выберите тип машины. Минимальные характеристики - это «2 vCPUs, 8 GB RAM, 50 GB хранения», иначе службы фонового уровня OpenReplay просто не запустятся. Поэтому мы рекомендуем **по крайней мере** `n2-standard-2` (или эквивалент - обратите внимание, что `e2-standard-2` известно давать проблемы при развертывании), что достаточно для низкого / умеренного объема. Если вы ожидаете высокой нагрузки, вы должны масштабировать отсюда.
5. Измените ваш диск загрузки на *Ubuntu 20.04 LTS* или выше, затем выберите *SSD persistent disk* для типа диска загрузки и установите размер в 50 ГБ.
6. Проверьте оба «Разрешить трафик HTTP» и «Разрешить трафик HTTPS» в брандмауэре
7. Нажмите «Создать»

## Развертывание OpenReplay

Как только ваш экземпляр будет «Запущен», подключитесь к нему, нажав кнопку «SSH», затем установите OpenReplay, указав домен, на котором он будет работать (например DOMAIN_NAME = openreplay.mycompany.com):


```bash
sudo wget https://raw.githubusercontent.com/openreplay/openreplay/main/scripts/helmcharts/openreplay-cli -O /bin/openreplay 
sudo chmod +x /bin/openreplay
openreplay -i DOMAIN_NAME
```


## Настройка TLS / SSL

OpenReplay имеет дело с чувствительными данными пользователей и поэтому требуется HTTPS для работы. Это обязательно, иначе трекер просто не начнет запись. То же самое и для панели управления, без HTTPS вы не сможете повторить сеансы пользователей.

Самый простой способ обработки SSL в Google Cloud - это настройка балансировщика нагрузки (Google Load Balancing) и запуск OpenReplay за ним. Другой вариант - это создание или использование вашего собственного сертификата SSL и указание вашего поддомена (т. Е. Openreplay.mycompany.com) на экземпляр OpenReplay. Подробнее об обоих вариантах ниже.

### Настр
```yaml
ingress-nginx: &ingress-nginx
  controller:
    config:
      use-forwarded-headers: true
```
